# minJAX

./: LICENSE  README.md  playground.py  pyproject.toml
src/minjax/: core.py  dtypes.py  lax.py  primitives.py  pytrees.py  typing.py  utils.py
src/minjax/interpreters/: ad.py
tests/: test_primitive_eval.py  test_primitive_jvp.py
