[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minJAX"
description = "A minimal and didactic implementation of the fundamental concepts in JAX's core system"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Leandro Lacerda Campos" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy>=1.22",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/leandrolcampos/minJAX#readme"
Issues = "https://github.com/leandrolcampos/minJAX/issues"
Source = "https://github.com/leandrolcampos/minJAX"

[project.optional-dependencies]
test = [
  "coverage[toml]>=6.5",
  "mpmath",
  "pytest",
]
lint = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
dev = ["minjax[test,lint]"]

[tool.hatch.version]
path = "src/minjax/__about__.py"

[tool.hatch.envs.default]
dependencies = ["minjax[test]"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
dependencies = ["minjax[dev]"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/minjax tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["minjax"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["minjax", "tests"]
branch = true
parallel = true
omit = [
  "src/minjax/__about__.py",
]

[tool.coverage.paths]
minjax = ["src/minjax", "*/minjax/src/minjax"]
tests = ["tests", "*/minjax/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
